# GraphicLearn

./: .gitignore  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: CMakeLists.txt  glad.c
src/: CMakeLists.txt  compile-&-test-msvc-win.bat  main.cpp  shader.h
